--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -84,7 +84,8 @@
   .side-menu, 
   .content-wrapper,
   .post-wrapper,
-  .header-wrapper {
+  .header-wrapper,
+  .video-container {
     transform: translateX(-320px);
   }
 }
